--- a/TimeBoxer/project.json
+++ b/TimeBoxer/project.json
@@ -3,7 +3,9 @@
     "Microsoft.ApplicationInsights": "1.0.0",
     "Microsoft.ApplicationInsights.PersistenceChannel": "1.0.0",
     "Microsoft.ApplicationInsights.WindowsApps": "1.0.0",
-    "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0"
+    "Microsoft.NETCore.UniversalWindowsPlatform": "5.0.0",
+    "Microsoft.Toolkit.Uwp.Notifications": "1.0.0",
+    "QueryString.NET": "1.0.0"
   },
   "frameworks": {
     "uap10.0": {}
